sweet: Define OEM fast charge sysfs node
 * this forces android to display "charging rapidly" whenever our
   proprietary 33w charger is connected, based on the value of
   this node (0/1)

Change-Id: I2a36ccb62621672e480e4b25a335410044fbb372
Signed-off-by: basamaryan <basam.aryan@gmail.com>

--- a/overlay-custom/frameworks/base/core/res/res/values/config.xml
+++ b/overlay-custom/frameworks/base/core/res/res/values/config.xml
@@ -6,4 +6,15 @@
 <resources>
     <!-- Pocket Lock -->
     <bool name="config_pocketModeSupported">false</bool>
+
+    <!-- Array of:
+        - Path to fast charging status file
+        - Delimiter ";"
+        - Value if fast charging is active
+        Used to detect whether an oem fast charger is active
+        Example: <item>/sys/class/power_supply/battery/fastchg_status;1</item>
+    -->
+    <string-array name="config_oemFastChargerStatusPaths" translatable="false">
+         <item>/sys/class/power_supply/bms/fastcharge_mode;1</item>
+    </string-array>
 </resources>
